[gd_scene load_steps=6 format=2]

[ext_resource path="res://shared/themes/flat_panel_style.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/TownName/TownName.gd" type="Script" id=2]
[ext_resource path="res://shared/fonts/OpenSans-SemiBold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundPanel/CenterContainer/TownName:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 4.7, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundPanel/CenterContainer/TownName:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1, 3.5, 4.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundPanel:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 4.7, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 80 ), Vector2( 1280, 80 ), Vector2( 1280, 0 ) ]
}

[node name="TownName" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="PanelContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.5
margin_bottom = 55.5
mouse_filter = 2
size_flags_horizontal = 13
size_flags_vertical = 13
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="BackgroundPanel"]
margin_right = 1280.0
margin_bottom = 80.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownName" type="Label" parent="BackgroundPanel/CenterContainer"]
margin_left = 539.0
margin_top = 15.0
margin_right = 740.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Town Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade"
anims/fade = SubResource( 2 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
